--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "async": "^1.5.0",
+    "gm": "^1.21.1",
     "lodash": "^3.10.1",
+    "request": "^2.67.0",
     "twit": "^2.1.1",
     "x-ray": "^2.0.2"
   },
